--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "svelte": "^5.35.5",
+    "svelte-spa-router": "^4.0.1",
     "vite": "^7.0.4"
   }
 }
