--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "autoprefixer": "^10.4.21",
+    "onesignal-cordova-plugin": "^5.2.15",
+    "postcss": "^8.5.6",
     "svelte": "^5.35.5",
     "svelte-spa-router": "^4.0.1",
+    "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
   }
 }
